@@ -4,9 +4,15 @@
 # All rights reserved
 #
 # 
-set path=(/hdfdap/hyrax-1.8.0/bin $path)
-setenv LD_LIBRARY_PATH /hdfdap/hyrax-1.8.0/lib
-setenv PKG_CONFIG_PATH /hdfdap/hyrax-1.8.0/lib/pkgconfig:/usr/lib/pkgconfig/
+# Please read OPTIONAL TESTING WITH NASA DATA section in INSTALL document
+# to know what this script does.
+# 
+# This script assumes that the latest Hyrax libdap and bes modules are
+# installed under /hdfdap/hyrax directory.
+#
+set path=(/hdfdap/hyrax/bin $path)
+setenv LD_LIBRARY_PATH /hdfdap/hyrax/lib
+setenv PKG_CONFIG_PATH /hdfdap/hyrax/lib/pkgconfig:/usr/lib/pkgconfig/
 
 # Set up the local test environment.
 cp data/grid_1_2d.h5 data.nasa/
@@ -16,7 +22,7 @@ mv bes-testsuite/hdf5_handlerTest.at bes-testsuite/hdf5_handlerTest.at.orig
 cp bes-testsuite/hdf5_handlerTest.nasa.at bes-testsuite/hdf5_handlerTest.at
 
 # Test CF option for NASA products.
-./configure  --with-hdf5=/hdfdap/hyrax-1.8.0
+./configure  --with-hdf5=/hdfdap/hyrax
 make
 make check >& test.nasa.txt
 mv bes-testsuite/hdf5_handlerTest.log test.nasa.log.txt
